--- a/app/assets/stylesheets/components/stock_show.scss
+++ b/app/assets/stylesheets/components/stock_show.scss
@@ -88,17 +88,21 @@ body {
 #stock-show-market-bar {
   min-height: 20%;
   width: 100%;
-  box-shadow: 0px 8px 24px rgb(173, 173, 173);
+  box-shadow: 1px 1px 5px 2px rgb(173, 173, 173);
   border-radius: 6px;
   display: flex;
   align-items: center;
   flex-direction: column;
+  margin-top: 10px;
+}
+
+.cursor-pointer{
+  cursor: pointer;
 }
 
 
-
 #stock-show-market-bar-button {
-  height: 80px;
+  min-height: 80px;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -291,9 +295,10 @@ input::-webkit-inner-spin-button {
   font-family: sans-serif;
   font-weight: bold;
   background-color: #00C805;
+  color: white;
   border: none;
   border-radius: 5px;
-  height: 50%;
+  height: 40px;
   // font-family: sans-serif
 }
 
