buying and selling logic is pretty much finished, need to work on displaysucess

--- a/app/assets/stylesheets/components/stock_show.scss
+++ b/app/assets/stylesheets/components/stock_show.scss
@@ -111,6 +111,9 @@ body {
   // border: 1px solid red;
 }
 
+#stock-show-market-bar-button > * {
+  width: 80%;
+}
 
 
 #stock-show-market-bar-trade {
