added buying power component

--- a/app/assets/stylesheets/components/stock_show.scss
+++ b/app/assets/stylesheets/components/stock_show.scss
@@ -43,7 +43,7 @@ body {
 }
 
 #stock-show-graph-div {
-  border: 1px solid red;
+  // border: 1px solid red;
   height: 51%;
   width: 100%;
   display: flex;
@@ -52,7 +52,7 @@ body {
 }
 
 #stock-show-graph {
-  border: 1px solid red;
+  // border: 1px solid red;
   height: 51%;
   width: 100%;
   // overflow: hidden;
