--- a/app/assets/stylesheets/components/logged_in_home.scss
+++ b/app/assets/stylesheets/components/logged_in_home.scss
@@ -10,7 +10,7 @@
 #logged-in-left {
   // border: 1px solid red;
   width: 72%;
-  padding-right: 50px;
+  padding-right: 80px;
 }
 
 
@@ -25,3 +25,12 @@
   // border: 1px solid red;
 }
 
+#buying-power {
+  // border: 1px solid blue;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 70px;
+  font-weight: bold;
+  font-size: 15px;
+}
