--- a/app/assets/stylesheets/components/logged_in_home.scss
+++ b/app/assets/stylesheets/components/logged_in_home.scss
@@ -27,10 +27,17 @@
 
 #buying-power {
   // border: 1px solid blue;
+  margin-top: 6px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 70px;
   font-weight: bold;
   font-size: 15px;
+}
+
+#buying-power:hover {
+  background-color: rgb(243, 243, 243);
+  border-radius: 5px;
+
 }
