--- a/app/assets/stylesheets/components/stock_bar.scss
+++ b/app/assets/stylesheets/components/stock_bar.scss
@@ -101,6 +101,7 @@
   width: 100%;
   text-decoration: none;
   color: black;
+  // height: 40px;
   // border: 1px solid black;
   display: flex;
   justify-content: center;
