--- a/app/assets/stylesheets/components/logged_in_home.scss
+++ b/app/assets/stylesheets/components/logged_in_home.scss
@@ -1,22 +1,24 @@
 #logged-in-bottom {
   // border: 1px solid blue;
-  width: 55vw;
+  width: 65vw;
   height: 91vh;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   margin-top: 50px;
 }
 
 #logged-in-left {
   // border: 1px solid red;
-  width: 72%;
+  width: 55%;
   padding-right: 80px;
 }
 
 
 #logged-in-right {
   // border: 1px solid green;
-  width: 33%;
+  width: 18%;
+  min-width: 300px;
   height: 95%;
 }
 
@@ -26,13 +28,14 @@
 }
 
 
-#home-stock-show-graph-div{
+#home-stock-show-graph-div {
   // border: 1px solid red;
   height: 35%;
   width: 100%;
   display: flex;
   // justify-content: center;
   flex-direction: column;
+  overflow: hidden;
 }
 
 
