used poylgon to get company info and able to get news, need to css companyinfo and start working on getting news

--- a/app/assets/stylesheets/components/stock_show.scss
+++ b/app/assets/stylesheets/components/stock_show.scss
@@ -34,7 +34,19 @@ body {
   // border: 1px solid red;
   height: 100%;
   width: 60%;
+  overflow: scroll;
 }
+
+
+// this hides the scrollbar
+::-webkit-scrollbar {
+  width: 0;  /* Remove scrollbar space */
+  background: transparent;  /* Optional: just make scrollbar invisible */
+}
+
+// .stock-show-left::-webkit-scrollbar {
+//   display: none;
+// }
 
 #stock-show-right {
   // border: 1px solid red;
