company about section finished

--- a/app/assets/stylesheets/components/stock_show.scss
+++ b/app/assets/stylesheets/components/stock_show.scss
@@ -40,6 +40,9 @@ body {
 #compay-info-description {
   padding-top: 14px;
 }
+.bottom-padding {
+  padding-bottom: 4px;
+}
 
 #company-short-info {
   padding-top: 20px;
