working on news

--- a/app/assets/stylesheets/components/stock_show.scss
+++ b/app/assets/stylesheets/components/stock_show.scss
@@ -68,11 +68,12 @@ body {
   font-size: 14px;
 }
 
-#company-info-about {
+.stock-show-title {
   font-family: 'Rubik', sans-serif;
   font-size: 24px;
   font-weight: bold;
   padding-bottom: 27px;
+  padding-top: 30px
 }
 
 // this hides the scrollbar
