--- a/app/assets/stylesheets/components/news.scss
+++ b/app/assets/stylesheets/components/news.scss
@@ -1,19 +1,20 @@
 .news {
   padding-top: 20px;
+  padding-bottom: 10px;
   display: flex;
+  justify-content: space-between;
   // width: 100%;
-  width: 679px;
-  height: 156px;
+  width: 100%;
+  height: 200px;
   overflow: hidden;
+  text-decoration: none;
+  color: black;
 }
 
 .news:hover {
   background-color: rgb(228, 228, 228);
 }
 
-.news > div{
-  width: 50%;
-}
 
 .news-image {
   // max-width: 100%;
@@ -25,7 +26,26 @@
   font-weight: bold;
 }
 
+.news-source-time {
+  display: flex;
+}
+
 
 .news-right {
   padding-left: 15px;
+  height: 156px;
+  width: 200px;
+  // border: 1px solid red;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.news-left {
+  // border: 1px solid red;
+  height: 156px;
+  width: 60%;
+}
+
+.news-source{
+  padding: 0px 5px 3px 0px;
 }
