cssing news more

--- a/app/assets/stylesheets/components/news.scss
+++ b/app/assets/stylesheets/components/news.scss
@@ -46,6 +46,10 @@
   width: 60%;
 }
 
-.news-source{
+.news-source {
   padding: 0px 5px 3px 0px;
+}
+
+.news-left > div {
+  padding-bottom: 15px;
 }
