fixed bar problem

--- a/app/assets/stylesheets/components/stock_show.scss
+++ b/app/assets/stylesheets/components/stock_show.scss
@@ -12,6 +12,10 @@ body {
   display: flex;
 }
 
+// div {
+//   border: 1px solid red;
+// }
+
 #stock-show-graph-return > div {
   padding-right: 6px;
 }
