working on depositing money

--- a/app/assets/stylesheets/components/home.scss
+++ b/app/assets/stylesheets/components/home.scss
@@ -101,9 +101,9 @@
   justify-content: space-between;
 }
 
-#home-three > div > div {
+// #home-three > div > div {
   // border: 1px solid black;
-}
+// }
 
 
 
