--- a/app/assets/stylesheets/components/stock_show.scss
+++ b/app/assets/stylesheets/components/stock_show.scss
@@ -174,6 +174,8 @@ body {
   align-items: center;
   flex-direction: column;
   margin-top: 10px;
+  transition-duration: 1s;
+  transition-property: height;
 }
 
 .cursor-pointer{
@@ -188,6 +190,8 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  transition-duration: 1s;
+  transition-property: height;
   // border: 1px solid red;
 }
 
