--- a/app/assets/stylesheets/components/signup_page.scss
+++ b/app/assets/stylesheets/components/signup_page.scss
@@ -1,16 +1,17 @@
 .signup-page {
-  // border: 1px solid red;
+  border: 1px solid red;
   display: flex;
   justify-content: center;
 }
 
 #signup-page-left {
   // border: 1px solid blue; 
-  width: 40vw;
-  height: 60vh;
+  width: 49vw;
+  height: 99vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 
 }
 
@@ -18,6 +19,7 @@
 #signup-page-left-top {
   // border: 1px solid rgb(255, 0, 234);
   display: flex;
+  width: 80%;
   flex-direction: column;
   justify-content: center;
 }
@@ -100,13 +102,15 @@
 
 #signup-page-left-bottom {
   // border: 1px solid rgb(255, 0, 234); 
-  height: 12%;
-  width: 50%;
+  height: 80px;
+  width: 80%;
   display: flex;
   flex-direction: row;
   align-items: flex-end;
-  justify-content: space-between;
+  // justify-content: space-between;
 }
+
+
 
 #signup-page-left-errors {
   color: red;
@@ -126,7 +130,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  
+  margin-left: 15px;
 }
 
 #signup-page-left-bottom-right > div {
@@ -142,7 +146,7 @@
 #signup-page-left-bottom-left {
   // border: 1px solid rgb(255, 0, 234); 
   height: 35px;
-  width: 40%;
+  width: 20%;
 }
 
 #signup-page-login-link{
@@ -160,12 +164,13 @@
   height: 100%;
   width: 100%;
   justify-content: center;
-  min-width: 120px;
+  // min-width: 150px;
   white-space: nowrap;
   background-color: rgb(0, 200, 5);
   color: white;
   font-size: 14px;
   font-weight: 900;
+  // margin-right: 20px;
 }
 
 
@@ -174,7 +179,7 @@
 #signup-page-right {
   // border: 1px solid black; 
   // width: 40vw;
-  height: 60vh;
+  height: 99vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
