sign up page restyled 2

--- a/app/assets/stylesheets/components/signup_page.scss
+++ b/app/assets/stylesheets/components/signup_page.scss
@@ -1,5 +1,5 @@
 .signup-page {
-  border: 1px solid red;
+  // border: 1px solid red;
   display: flex;
   justify-content: center;
 }
@@ -179,7 +179,7 @@
 #signup-page-right {
   // border: 1px solid black; 
   // width: 40vw;
-  height: 99vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
