fixed homeloggedout picture

--- a/app/assets/stylesheets/components/home.scss
+++ b/app/assets/stylesheets/components/home.scss
@@ -129,7 +129,7 @@
 #home-four {
   background-color: rgb(241,235,230);
   width: 99vw;
-  height: 67vh;
+  height: 600px;
   color: black;
   border-bottom: 1px solid black;
   display: flex;
